# cv_preproc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backcup  README.md  package.xml  package.xml.backup
launch/: filter.launch
scripts/: cv_proj_cerri.py  image_filter.py  lib_filters.py  lib_histograms.py  lib_trackbars.py  noROS_image_filter.py  noise_simulation.py  object_detector.py  preprocessor.py
scripts/bruno/: erosion_points.py  hole_tracking.py  image_robot.py  point_pointer.py  rectangle_tracking.py
